# tetrix

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  build.ninja  cmake_install.cmake  compile_commands.json
.cmake/api/v1/reply/: cache-v2-dce1184061b2f4299105.json  cmakeFiles-v1-7632f18f1288b1322850.json  codemodel-v2-81bd882b9c07dd5ea285.json  directory-_deps.raylib-build.raylib-Debug-b58972b9c9b61d3a3db2.json  index-2025-06-16T19-37-10-0238.json  target-glfw-Debug-564bcb990d77ab883879.json  target-raylib-Debug-2ad0ca9f5d4d8a8be755.json  target-tetris_cpp-Debug-6318a9c33923fc6ec3ba.json
src/: Block.cpp  Block.hpp  Board.cpp  Board.hpp  EndScreen.cpp  EndScreen.hpp  GameManager.cpp  GameManager.hpp  GameScene.cpp  GameScene.hpp  GameState.hpp  HowToPlay.cpp  HowToPlay.hpp  Item.cpp  Item.hpp  ModeSelectPage.cpp  ModeSelectPage.hpp  RankingPage.cpp  RankingPage.hpp  SRS.cpp  SRS.hpp  ScoreSystem.cpp  ScoreSystem.hpp  StartPage.cpp  StartPage.hpp  Utility.cpp  Utility.hpp  main.cpp
